# pbs-split

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: pytest.yaml
changelog.d/: 20241111_051115_pfmsoft_rich_progress.md
changelog.d/templates/: entry_title_template.md.j2  new_fragment.md.j2
dev-docs/: project-setup.md  sphinx_docs.md
docs/source/: conf.py  index.md
docs/source/documentation/cli/: main.rst
scripts/: connect-to-github.sh  docs-build.sh  split_test_data.py
src/pbs_split/: __init__.py  extract_pages.py  extract_trips.py  indexed_line_reader.py  indexed_string.py  models.py
src/pbs_split/cli/: main_typer.py  pages_cli.py  split_pages_cli.py  split_trips_cli.py  trips_cli.py
src/pbs_split/snippets/: task_complete_typer.py  validate_dir_out.py
src/pbs_split/snippets/file/: line_number_reader.py
src/pbs_split/snippets/hash/: hash_file.py  make_hashed_file.py  model.py
src/pbs_split/snippets/indexed_string/: filters.py  index_strings.py  model.py
tests/: conftest.py  generate_resource_files.py
tests/pbs_split/: __init__.py  test_page_model.py  test_page_split.py  test_typer_command_paths.py
tests/pbs_split/cli/: test_package_to_pages_split.py  test_page_split.py  test_page_to_trips_split.py  test_pages_to_trips_split.py  test_typer_command_paths.py
tests/pbs_split/model/: test_page_model.py
tests/pbs_split/trip/: test_page_to_trip.py
tests/resources/bid_package/: PBS_DCA_May_2022_20220408124308.txt  three_pages.txt
tests/resources/page/: PBS_DCA_February_2023_20230110102037.pdf.txt-page_1.json  PBS_DCA_February_2023_20230110102037.pdf.txt-page_2.json  PBS_DCA_February_2023_20230110102037.pdf.txt-page_3.json  PBS_DCA_February_2023_20230110102037.pdf.txt-page_4.json  PBS_DCA_February_2023_20230110102037.pdf.txt-page_5.json  PBS_DCA_February_2023_20230110102037.pdf.txt-page_6.json  PBS_DCA_February_2023_20230110102037.pdf.txt-page_7.json  PBS_DCA_February_2023_20230110102037.pdf.txt-page_8.json  PBS_DCA_May_2022_20220408124308.page_1_of_173.json  PBS_DCA_May_2022_20220408124308.page_2_of_173.json  PBS_DCA_May_2022_20220408124308.page_3_of_173.json  PBS_DCA_May_2022_20220408124308.page_4_of_173.json  PBS_DCA_May_2022_20220408124308.page_5_of_173.json  PBS_DCA_May_2022_20220408124308.page_6_of_173.json  PBS_DCA_May_2022_20220408124308.page_7_of_173.json  PBS_DCA_May_2022_20220408124308.page_8_of_173.json
